--- a/static/styles.css
+++ b/static/styles.css
@@ -14,17 +14,28 @@ button {
 }
 
 img {
-    width: 300px;
+    width: 400px;
     height: auto;
 }
 
 .petition-text {
     width: 50%;
     margin: auto;
+    font-weight: bold;
+}
+
+.thanks-text {
+    width: 400px;
+    margin: auto;
+    font-weight: bold;
+}
+
+.thanks-text a {
+    font-weight: normal;
 }
 
 form {
-    margin-top: 16px;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,21 +59,42 @@ form div {
 }
 
 #gif {
-    margin-top: 50px;
-    height: 300px;
-    width: auto;
+    margin-top: 20px;
+    height: auto;
+    width: 400px;
+}
+
+#signature {
+    display: block;
+    width: 340px;
+    height: 100px;
+    border: 1px solid black;
+    margin: auto;
 }
 
 #tall-guy-signers {
+    margin-top: 20px;
+}
+
+#signers {
     margin-top: 50px;
-}
-
-ol {
-    display: inline-block;
-    margin-top: 0;
-}
-
-li {
-    text-align: left;
     font-style: italic;
+    font-weight: normal;
+}
+
+@media (max-width: 768px) {
+    .petition-text {
+        width: 90%;
+    }
+    .thanks-text {
+        width: 90%;
+    }
+    #gif {
+        width: 90%;
+        height: auto;
+    }
+    img {
+        width: 90%;
+        height: auto;
+    }
 }
