--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,11 +1,12 @@
+{{> header}}
+
 <img id="tall-guy-signers" src="/the-tall-guy.jpg" alt="The Tall Guy">
 
-<div class="petition-text">
-<p>Concerts are better without The Tall Guy! Here is the list of people who already signed the petition for Tall-Guy-free shows:</p>
-
-<ol>
-    {{#each signers}}
-    <li>{{this.first}} {{this.last}}</li>
-    {{/each}}
-</ol>
+<div class="thanks-text">
+    <p>Concerts are better without The Tall Guy! Here is the list of people who already signed the petition for Tall-Guy-free shows:</p>
+    <div id="signers">
+        {{#each signers}}
+        <p>{{this.first}} {{this.last}}</p>
+        {{/each}}
+    </div>
 </div>
