--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,5 +1,11 @@
-<img id="gif" src="https://media.giphy.com/media/1Z02vuppxP1Pa/giphy.gif" alt="thank you gif">
+{{> header}}
 
-<div class="petition-text">
-    <p>Thank you for signing our petition! Your contribution is crucial in our battle for Tall-Guy-free shows.<br><br><a href="signers">See all {{numOfSigners}} signers.</a></p>
+
+<img id="gif" src="{{gif}}" alt="thank you gif"/>
+
+<div class="thanks-text">
+    <p>Thank you for signing our petition!</p>
+    <img id="signature" src="{{signature}}" alt="User Signature">
+    <br>
+    <a href="signers">See all {{numOfSigners}} signers</a>
 </div>
