--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -16,9 +16,10 @@
         {{else}}
 
         <p>{{this.first}} {{this.last}} {{this.age}} <a href="/petition/signers/{{this.city}}">{{this.city}}</a></p>
-        
+
         {{/if}}
 
         {{/each}}
     </div>
+    <a href="/profile/edit">Go to your profile</a>
 </div>
