delete account working, need middleware for edit profile

--- a/views/edit_profile.handlebars
+++ b/views/edit_profile.handlebars
@@ -8,5 +8,9 @@
     <input type="text" name="age" value="{{age}}">
     <input type="text" name="city" value="{{city}}">
     <input type="text" name="url" value="{{url}}">
-    <button>UPDATE</button>
+    <button>UPDATE YOUR ACCOUNT</button>
+</form>
+
+<form action="/profile/delete" method="POST">
+    <button name="delete-signature">DELETE YOUR ACCOUNT</button>
 </form>
