--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -7,5 +7,11 @@
     <p>Thank you for signing our petition!</p>
     <img id="signature" src="{{signature}}" alt="User Signature">
     <br>
-    <a href="signers">See all {{numOfSigners}} signers</a>
+    <p><a href="signers">See all {{numOfSigners}} signers</a></p>
+
+    <p><a href="/profile/edit">Go to your profile</a></p>
+
+    <form action="/delete-signature" method="POST">
+        <button name="delete-signature">DELETE YOUR SIGNATURE</button>
+    </form>
 </div>
