--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -16,6 +16,7 @@
         </div> -->
         <input id="input-sign" type="hidden" name="signature">
         <canvas class="form-elem" id="canvas" height="100px" width="340px"></canvas>
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <button class="form-elem">SUBMIT</button>
     </form>
 </div>
