--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -7,6 +7,7 @@
     <input type="text" name="last" placeholder="Last Name">
     <input type="text" name="email" placeholder="E-mail address">
     <input type="text" name="password" placeholder="Password">
+    <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <button name="sign-up">SIGN UP</button>
 </form>
 
