--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,5 +4,6 @@
     <input type="text" name="age" placeholder="Age">
     <input type="text" name="city" placeholder="City">
     <input type="text" name="homepage" placeholder="Homepage">
+    <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <button name="continue">CONTINUE</button>
 </form>
