--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,3 +1,4 @@
 <header>
-    <a id="logout" href="/logout">Logout</a>
+    <p><a href="/profile/edit">Your profile</a></p>
+    <p><a id="logout" href="/logout">Logout</a></p>
 </header>
