--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,5 @@
+<div class="petition-text">
+
 <p>Tell us more about yourself</p>
 
 <form method="POST">
@@ -5,5 +7,7 @@
     <input type="text" name="city" placeholder="City">
     <input type="text" name="homepage" placeholder="Homepage">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    <button name="continue">CONTINUE</button>
+    <button name="continue">CREATE PROFILE</button>
 </form>
+
+</div>
