--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,7 @@
-<p>please join our campaign</p>
+<!-- <img src="/the-tall-guy.jpg" alt="The Tall Guy"> -->
+
+<div class="petition-text">
+<p>The Tall Guy is an entity that populates concerts across the world. No matter how tall you are or which spot you decide to take at a show, chances that The Tall Guy will be right in front of you are pretty high. Please join our campaign for Tall-Guy-free concerts!</p>
 {{#if err}}
 <p id="error">Oops... something went wrong! Please sign again.</p>
 {{/if}}
@@ -12,3 +15,4 @@
 </form>
 
 <p>If you are already registered, please <a href="/login">login</a>.</p>
+</div>
