--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -5,11 +5,9 @@
 
 <div class="thanks-text">
     <p>Thank you for signing our petition!</p>
-    <img id="signature" src="{{signature}}" alt="User Signature">
+    <img id="signature" src="{{signature}}">
     <br>
     <p><a href="signers">See all {{numOfSigners}} signers</a></p>
-
-    <p><a href="/profile/edit">Go to your profile</a></p>
 
     <form action="/delete-signature" method="POST">
         <button name="delete-signature">DELETE YOUR SIGNATURE</button>
