--- a/static/styles.css
+++ b/static/styles.css
@@ -3,7 +3,29 @@ body {
     text-align: center;
 }
 
+header {
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background: black;
+    color: white;
+}
+
+/* input {
+    height: 20px;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    text-align: center;
+} */
+
+header a {
+    color: white;
+    text-decoration: none;
+}
+
 button {
+    margin-top: 16px;
     border-radius: 50px;
     font-size: 20px;
     font-weight: 400;
@@ -21,6 +43,8 @@ img {
     width: 50%;
     margin: auto;
     font-weight: bold;
+    color: black;
+    margin-bottom: 5%;
 }
 
 .thanks-text {
@@ -34,7 +58,6 @@ img {
 }
 
 form {
-    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
