--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,4 +1,7 @@
 <header>
-    <p><a href="/profile/edit">Your profile</a></p>
-    <p><a id="logout" href="/logout">Logout</a></p>
+    <div class="header-div">
+        <a href="/register">Campaign</a>
+        <a href="/profile/edit">Your profile</a>
+        <a id="logout" href="/logout">Logout</a>
+    </div>
 </header>
