--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
-<p>please log-in</p>
-{{#if err}}
-<p id="error">Oops... something went wrong! Please sign again or <a href="/register">register</a>.</p>
-{{/if}}
 <form method="POST">
     <input type="text" name="email" placeholder="E-mail address">
-    <input type="text" name="password" placeholder="Password">
+    <input type="password" name="password" placeholder="Password">
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    <button name="log-in">LOGIN</button>
+    <button name="log-in">Log in</button>
 </form>
+
+{{#if err}}
+<p id="error">Ops... something went wrong! Please try again or <a href="/register">register here</a></p>
+{{/if}}
