--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,18 +1,26 @@
-<!-- <img src="/the-tall-guy.jpg" alt="The Tall Guy"> -->
+<h1>Campaign for larger counters in every supermarket</h1>
 
-<div class="petition-text">
-<p>The Tall Guy is an entity that populates concerts across the world. No matter how tall you are or which spot you decide to take at a show, chances that The Tall Guy will be right in front of you are pretty high. Please join our campaign for Tall-Guy-free concerts!</p>
-{{#if err}}
-<p id="error">Oops... something went wrong! Please sign again.</p>
-{{/if}}
-<form method="POST">
-    <input type="text" name="first" placeholder="Fist Name">
-    <input type="text" name="last" placeholder="Last Name">
-    <input type="text" name="email" placeholder="E-mail address">
-    <input type="text" name="password" placeholder="Password">
-    <input type="hidden" name="_csrf" value="{{csrfToken}}">
-    <button name="sign-up">SIGN UP</button>
-</form>
+<figure>
+    <img src="counter.jpeg" alt="small counter">
+    <figcaption>The counter of a popular german supermarket chain.</figcaption>
+</figure>
 
-<p>If you are already registered, please <a href="/login">login</a>.</p>
+<div class="campaign">
+
+    <p>Many supermarkets in Germany are equipped with counters that, due to the tiny bagging areas, can cause customers stress, confusion and other inconveniences at checkout. While people usually come up with good bagging strategies, we still believe that bigger counters would guarantee everybody the right for a smooth checkout. <br> <br> <strong>Please join our campaign!</strong></p>
+
+    <form method="POST">
+        <input type="text" name="first" placeholder="Fist Name">
+        <input type="text" name="last" placeholder="Last Name">
+        <input type="text" name="email" placeholder="E-mail address">
+        <input type="password" name="password" placeholder="Password">
+        <input type="hidden" name="_csrf" value="{{csrfToken}}">
+        <button name="sign-up">Sign up</button>
+    </form>
+
+    {{#if err}}
+    <p id="error">Something went wrong... Please sign up again!</p>
+    {{/if}}
+
+    <p>If you are already registered, please <a href="/login">login</a></p>
 </div>
