--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,7 +1,7 @@
 {{> header}}
 
 <div class="petition-alt">
-    <p>Many thanks to the people from <span>{{city}}</span> who care about smooth checkouts at german supermarkets:</p>
+    <p>Many thanks to the people from <span>{{city}}</span> who support our cause!</p>
 
     <div class="signers">
 
