--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -7,7 +7,7 @@
 
 <div class="campaign">
 
-    <p>Many supermarkets in Germany are equipped with counters that, due to the tiny bagging areas, can cause customers stress, confusion and other inconveniences at checkout. While people usually come up with good bagging strategies, we still believe that bigger counters would guarantee everybody the right for a smooth checkout. <br> <br> <strong>Please join our campaign!</strong></p>
+    <p>Many supermarkets in Germany are equipped with counters that have tiny bagging areas. Since cashiers usually scan items at the speed of light, small counters can cause customers stress, confusion and other inconveniences at checkout. While people usually come up with good packing strategies, we still believe that wider packing areas would ensure everybody has a smooth checkout. <br> <br> <strong>Please join our campaign!</strong></p>
 
     <form method="POST">
         <input type="text" name="first" placeholder="Fist Name">
