--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,7 +1,7 @@
 {{> header}}
 
 <div class="petition-alt">
-    <p>Thanks to all who signed our petition. We hope that every supermarket in Germany will soon guarantee easy checkouts for their customers!</p>
+    <p>Thanks to all the people who signed our petition. We hope that every supermarket in Germany will soon ensure everybody has a smooth checkout!</p>
 
     <div class="signers">
 
